# daily-planner

./: .gitignore  GEMINI.md  README.md  electron-builder.json5  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tests.json  vite.config.ts
.github/workflows/: build.yml  release.yml
e2e/: workflow.spec.ts
electron/: main.ts
scripts/: dev-electron.mjs  verify-macos-icon.sh
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AIAssistant.tsx  CalendarView.css  CalendarView.tsx  DailyPlanner.tsx  GettingStartedDialog.tsx  HabitTracker.tsx  InboxWorkspace.tsx  PomodoroFloatingBall.tsx  PomodoroTimer.tsx  QuarterlyGoals.tsx  ReviewWorkspace.tsx  Settings.tsx  TimelineView.tsx  TodayWorkspace.tsx  WeeklyPlan.tsx  WeeklyReport.tsx  WorkflowSuggestionCard.tsx
src/content/: floatingCopy.ts  focusCompanionCopy.ts  reviewPanelsCopy.ts  reviewStateCopy.ts  todayStateCopy.ts  workflowCopy.ts
src/contexts/: FeedbackContext.tsx  PomodoroContext.tsx
src/hooks/: useHoldAction.ts
src/i18n/: index.tsx
src/services/: aiActions.ts  aiService.ts  assistantData.ts  baiduService.ts  caldavService.ts  updater.ts
src/stores/: migrations.ts  useAppStore.ts
src/types/: index.ts
src/utils/: events.ts  runtime.ts  (+5 more)
tests/: assistant-data.test.ts  focus-rhythm.test.ts  migrations.test.ts  node-test-shim.d.ts  store.test.ts  task-logic.test.ts  week-utils.test.ts
(+10 files in other folders)
