[package]
name = "daily-planner"
version = "0.2.3"
description = "A Daily Planner AI App"
authors = ["lqf0624"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
notify-rust = "4.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[features]
custom-protocol = ["tauri/custom-protocol"]
